--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat WebSocket</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    
+    <header>
+        <form id="form">
+            <input type="text" id="msg" autofocus autocomplete="off" placeholder="Digite uma mensagem a enviar...">
+            <button type="submit">Enviar</button>
+        </form>
+    </header>
+    <ul id="mensagem"></ul>
+    <div id="status"></div>
 </body>
 </html>
