--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat WebSocket</title>
     <link rel="stylesheet" href="estilo.css">
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -17,5 +19,18 @@
     </header>
     <ul id="mensagem"></ul>
     <div id="status"></div>
+
+    <script>
+        $(function(){
+            const socket = io()
+            $('#form').submit(function(evt){
+                evt.preventDefault
+                socket.emit('chat msg', $('#msg').val())
+                $('#msg').val('')
+            })
+
+        })
+        //uma função criada dentro de parenteses não precisa ter nome, ela e uma função anonima
+    </script>
 </body>
 </html>
