--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         $(function(){
             const socket = io()
             $('#form').submit(function(evt){
-                evt.preventDefault
-                socket.emit('chat msg', $('#msg').val())
+                socket.emit('chat msg', $('#msg').val()) //mensagem esta sendo enviada
                 $('#msg').val('')
+                return false;
             })
 
         })
